fix: limit scrollbar overflow to modals

--- a/src/layout/css/_Modal.scss
+++ b/src/layout/css/_Modal.scss
@@ -16,9 +16,9 @@
 
 .modal {
   padding-top: 10px !important;
-}
-
-.modal::-webkit-scrollbar {
-  width: 0;
-  background: transparent;
+  
+  ::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
 }
